[gd_scene load_steps=4 format=3 uid="uid://cc7uecnf8r3uj"]

[ext_resource type="Script" path="res://Level/Tiles/Platform/GD_Platform.gd" id="1_cf8j1"]
[ext_resource type="MeshLibrary" uid="uid://igtk5abse8xh" path="res://Level/Tiles_Set/mesh_lib/set_proto.tres" id="2_bxkda"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pthba"]
size = Vector3(1.49908, 0.513068, 1.45953)

[node name="S_Platform" type="Node3D"]
script = ExtResource("1_cf8j1")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, -1.00944e-09, -1.01863e-09, 1.00944e-09, 1, 0, 1.01863e-09, -1.02825e-18, 1, 0, 0, 0)
mesh_library = ExtResource("2_bxkda")
cell_size = Vector3(0.5, 0.5, 0.5)
cell_scale = 0.25
data = {
"cells": PackedInt32Array(1, 0, 1441792, 65535, 0, 1048576, 0, 0, 1048577, 1, 1, 655364, 65535, 1, 1048580, 65535, 65535, 4, 1, 65535, 1441796, 0, 65535, 0, 0, 1, 655360)
}
metadata/_editor_floor_ = Vector3(146, -7, 55)

[node name="StartPos" type="Node3D" parent="."]

[node name="EndPos" type="Node3D" parent="."]

[node name="OnTimer" type="Timer" parent="."]
one_shot = true

[node name="OffTimer" type="Timer" parent="."]
one_shot = true

[node name="FallTimer" type="Timer" parent="."]
one_shot = true

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.253086, 0.514462, 0.249007)
shape = SubResource("BoxShape3D_pthba")

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="OnTimer" to="." method="_on_on_timer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_off_timer_timeout"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
